code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__tool_activity_showcase.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: output
---
 +----------------------------------------------------------------------------+
 |                                    Code                                    |
 +----------------------------------------------------------------------------+


 › Can you gather details from the latest docs update?

   +- Web Search · Completed
   |
   |  Actions
   |   MM:SS  • Searching...
   |   MM:SS  • Query: "ratatui widget patterns"
   |   MM:SS  ✓ Results ready
   |
   +- [Ctrl+S] Settings · [Esc] Stop

   +- Browser (headless): Browser Session
   |
   |   Actions
   |    MM:SS  Clicked  #login-button
   |
   +- [Ctrl+B] View · [Esc] Stop

   +- deploy-helper
   |
   |  Run targeted regression suite
   |
   |  Agents
   |    No agent updates yet
   |
   |  Actions
   |   MM:SS  Started agent run for qa-bot
   |   MM:SS  Waiting for agents
   |

 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
   Read Only  (Shift+Tab change)                       Ctrl+H help  •  API key
